--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <script src="./scripts/dalay.js"></script>
     <script src="./scripts/singleton.js"></script>
+    <script src="./scripts/request.js"></script>
 </body>
 </html>
