--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="./scripts/dalay.js"></script>
     <script src="./scripts/singleton.js"></script>
     <script src="./scripts/request.js"></script>
+    <script src="./scripts/promiseAll.js"></script>
 </body>
 </html>
