promise chain with reduce

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Js Trainee Tasks</title>
 </head>
 <body>
-    <script src="./scripts/dalay.js"></script>
+    <!-- <script src="./scripts/dalay.js"></script>
     <script src="./scripts/singleton.js"></script>
-    <script src="./scripts/request.js"></script>
+    <script src="./scripts/request.js"></script> -->
     <script src="./scripts/consistentPromises.js"></script>
-    <script src="./scripts/promiseAll.js"></script>
+    <!-- <script src="./scripts/promiseAll.js"></script> -->
 </body>
 </html>
