--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="./scripts/consistentPromises.js"></script>
     <script src="./scripts/promiseAll.js"></script>
     <script src="./scripts/resolvePromise.js"></script>
+    <script src="./scripts/myFunctions.js"></script>
 </body>
 </html>
