added defineProperty and test

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="./scripts/promiseAll.js"></script>
     <script src="./scripts/resolvePromise.js"></script>
     <script src="./scripts/myFunctions.js"></script>
+    <script src="./scripts/objectCreatePolyfill.js"></script>
 </body>
 </html>
