--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="./scripts/resolvePromise.js"></script>
     <script src="./scripts/myFunctions.js"></script>
     <script src="./scripts/objectCreatePolyfill.js"></script>
+    <script src="./scripts/myNew.js"></script>
 </body>
 </html>
