--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="./scripts/myFunctions.js"></script>
     <script src="./scripts/objectCreatePolyfill.js"></script>
     <script src="./scripts/myNew.js"></script>
+    <script src="./scripts/transform.js"></script>
 </body>
 </html>
