union func init

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <script src="./scripts/objectCreatePolyfill.js"></script>
     <script src="./scripts/myNew.js"></script>
     <script src="./scripts/transform.js"></script>
+    <script src="./scripts/union.js"></script>   
 </body>
 </html>
