--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./scripts/objectCreatePolyfill.js"></script>
     <script src="./scripts/myNew.js"></script>
     <script src="./scripts/transform.js"></script>
-    <script src="./scripts/union.js"></script>   
+    <script src="./scripts/union.js"></script> 
+    <script src="./scripts/anagrams.js"></script>   
 </body>
 </html>
