sum function  init

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="./scripts/transform.js"></script>
     <script src="./scripts/union.js"></script> 
     <script src="./scripts/anagrams.js"></script>   
+    <script src="./scripts/sum.js"></script>
 </body>
 </html>
