--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
     <title>Js Trainee Tasks</title>
 </head>
 <body>
-    <script src="./scripts/dalay.js"></script>
-    <script src="./scripts/singleton.js"></script>
-    <script src="./scripts/request.js"></script>
-    <script src="./scripts/consistentPromises.js"></script>
-    <script src="./scripts/promiseAll.js"></script>
-    <script src="./scripts/resolvePromise.js"></script>
-    <script src="./scripts/myFunctions.js"></script>
-    <script src="./scripts/objectCreatePolyfill.js"></script>
-    <script src="./scripts/myNew.js"></script>
-    <script src="./scripts/transform.js"></script>
-    <script src="./scripts/union.js"></script> 
-    <script src="./scripts/anagrams.js"></script>   
-    <script src="./scripts/sum.js"></script>
+
+    <!-- <script src="./scripts/tasks/allTasks.js" type="module"></script> -->
 </body>
 </html>
