--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js Trainee Tasks</title>
+    <title>Js Trainee Menu</title>
+    <link rel="stylesheet" href="./css/menu.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <div class="main-menu">
+            <button class="btn-menu"><i class="fa fa-bars"></i></button>
+            <div class="title-menu"><h2>Simple Side Menu</h2></div>
+            <div class="logo-menu">
+                <img src="./css/img/logo-for-menu.png" class='menu-logo' alt="">
+            </div>
+        </div>
+            <ul class="list-menu">
+                <li><a href="#"><i class="fa fa-search"></i><span>Search</span></a></li>
+                <li><a href="#"><i class="fa fa-download"></i><span>Downloads</span></a></li>
+                <li><a href="#"><i class="fa fa-cogs"></i><span>Settings</span></a></li>
+                <li><a href="#"><i class="fa fa-info"></i><span>Help</span></a></li>
+                <li><a href="#"><i class="fa fa-map-marker"></i><span>Map Marker</span></a></li>
+                <li><a href="#"><i class="fa fa-home"></i><span>Home</span></a></li>
+            </ul>
+    </div>
 
+    <script src="./scripts/menu/menu.js"></script>
     <!-- <script src="./scripts/tasks/allTasks.js" type="module"></script> -->
 </body>
 </html>
